[tool.poetry]
name = "vulners"
version = "3.1.2"
description = "Python library and command-line utility for Vulners (https://vulners.com)"
readme = "README.md"
authors = ["Vulners Team"]
keywords = ["security", "network", "vulners", "vulnerability", "CVE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
packages = [
    { include = "vulners" },
]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.28.1"
orjson = "^3.10.18"
pydantic = "^2.11.4"

[tool.poetry.group.dev.dependencies]
mypy = { version = "^1.15.0", extras = ["faster-cache"] }
ruff = "^0.11.8"

[tool.ruff]
line-length = 98
target-version = "py313"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
